# cloudphone-yew-sample

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  index.scss
src/: app.rs  constants.rs  dictionary.rs  main.rs  t9.rs  words.rs  words.txt
src/views/: board.rs  letter.rs  mod.rs  row.rs  toast.rs
