[package]
name = "cloudphone-yew-sample"
version = "0.1.0"
edition = "2021"
description = "Yew.rs sample application for Cloud Phone"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# Learn more about Cloud Phone at https://developer.cloudfone.com/

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
# wasmbind is enabled by default https://github.com/chronotope/chrono/pull/771
chrono = "0.4"
rowdle = "0.2.1"
wasm-bindgen = "0.2.100"
gloo = "0.11.0"
web-sys = "0.3.77"
